name:                   radix
version:                0
license:                Apache-2.0
license-file:           LICENSE
author:                 Alois Cochard
maintainer:             alois.cochard@gmail.com
copyright:              Copyright (c) 2015 Alois Cochard
category:               Network
build-type:             Simple
cabal-version:          >=1.10

library
  default-language:     Haskell2010
  hs-source-dirs:       src
  ghc-options:          -Wall
  exposed-modules:
    Data.X509.Key
    Database.Clavis
    Database.Clavis.Store
    Network.Radix
    Network.Stipes
    Network.Stipes.Keyspace
  build-depends:
      base                >= 4.6.0.1    && < 5
    , asn1-encoding       >= 0.9        && < 0.10
    , bytestring          >= 0.10       && < 0.11
    , configurator        >= 0.3        && < 0.4
    , containers          >= 0.5        && < 0.6
    , cryptonite          >= 0.10       && < 0.14
    , http-types          >= 0.9        && < 0.10
    , msgpack             >= 1.0        && < 1.1
    , network             >= 2.6        && < 2.7
    , pem                 >= 0.2.2      && < 0.3
    -- , RSA                 >= 2.1        && < 2.3
    , text                >= 1.2        && < 1.3
    -- , tls                 >= 1.3        && < 1.4
    -- , uuid                >= 1.3        && < 1.4
    , vector              >= 0.10       && < 0.12
    , x509                >= 1.6        && < 1.7
    , x509-store          >= 1.6.1      && < 1.7
    , wai                 >= 3.2.0      && <= 3.3
    , wai-websockets      >= 3.0.0.8    && <= 3.1
    , warp                >= 3.2.2      && <= 3.3
    , warp-tls            >= 3.2.1      && <= 3.3
    , websockets          >= 0.9.6.1    && <= 1.0

executable radix
  main-is:              Main.hs
  build-depends:       
      base
    , radix
  hs-source-dirs:       radix
  ghc-options:          -Wall
  default-language:     Haskell2010
